# SPIRE_ZK

./: .gitmodules  Dockerfile  README.md  Readme.md
DockerSetup/: Readme.md
guiwen-msm-cuda-implementation/depends/libff-cuda/curves/bls12_381/: bls12_381_g1.cu
guiwen-msm-cuda-implementation/depends/libff-cuda/fields/: bigint.cu  bigint.cuh  fp.cu
guiwen-msm-cuda-implementation/depends/libstl-cuda/: set.cu  set.cuh
guiwen-msm-cuda-implementation/test/: Makefile  guiwen-msm.cu  set  test-double-addition.cu  thrust-set.cu
libff-tensor-multiplication/: readme.md  test-double-addition.cu  test_file_reference_sage.ipynb
libff-tensor-multiplication/libff-cuda/common/: multiplication-tensor.cu  multiplication-tensor.cuh
libff-tensor-multiplication/libff-cuda/fields/: bigint.cu  bigint.cuh  fp.cu  fp.cuh
libff-tensor-multiplication/libff-cuda/mini-mp-cuda/: mini-mp-cuda.cu  mini-mp-cuda.cuh
libff-tensor-multiplication/libff-cuda/scalar_multiplication/: multiexp.cu
libff-tensor-multiplication/libfqfft-cuda/libfqfft/test/: Makefile
msm-without-libraries/: README.md
msm-without-libraries/include/: FieldG1.cuh  G1Point.cuh  MultiBucketMSM.cuh  Scalar.cuh  cuZK.cuh  cuZK_2.cuh  libff.cuh  load_balance.cuh  test.cu  vector.cuh
msm-without-libraries/include/cuzk/: csr.cu  csr.cuh  ell.cu  ell.cuh  iterator.cuh  memory.cu  memory.cuh  type_traits.cuh  utility.cuh  vector.cu  vector.cuh
msm-without-libraries/src/: FieldG1.cu  G1Point.cu  MultiBucketMSM.cu  Scalar.cu  cuZK.cu  cuZK_2.cu  libff.cu  load_balance_base.cu  main.cu  vector.cu
msm-without-libraries/tests/: FieldG1_test.cu  G1Point_test.cu  Scalar_test.cu  gtest_G1Point.cu  unit_gtest.cu
msm-without-libraries/utils/: bls12_381_constants.cu  common_limb_operations.cu  libff_converter.cuh  utils.cu
pallas_vesta/: CMakeLists.txt  readme.md
pallas_vesta/constants/: pasta.cuh
pallas_vesta/include/: Field.cuh  Point.cuh  Scalar.cuh
pallas_vesta/src/: Field.cu  Point.cu  Scalar.cu  main.cu  msm.cu  msm_faster.cu  msm_optimization_1.cu  msm_optimization_2.cu  msm_optimization_3.cu  msm_sorted.cu  msm_with_filter.cu
pallas_vesta/tests/: Field_test.cu  Point_test.cu  constant_sage.py  constant_test.cu  constants.sage  msm_sage.py  msm_sage_parallel.py  point_sage.py  test_header.cuh  test_runner.cu
pallas_vesta/utils/: field-helper.cuh
